删除值班时间
