# docs/swagger.yaml
@@ -3499,6 +3499,22 @@ paths:
           schema:
             $ref: '#/definitions/utils.Response'
       summary: 课程日期列表
+  /service/schedule/delete-user-time-period:
+    post:
+      description: 删除员工时间周期
+      parameters:
+      - description: query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/base.Ids'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response'
+      summary: 删除员工时间周期
   /service/schedule/info:
     post:
       description: 课程详情
